--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Introduction"></activity>
+        <activity android:name=".Introduction" />
+        <activity
+            android:name=".volume_calculator"
+            android:label="@string/title_activity_volume_calculator"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".VolumeCalculator"
+            android:label="@string/title_activity_volume_calculator"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
