Added a unit contverter to app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:name=".VolumeCalculator"
             android:label="@string/title_activity_volume_calculator"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".unit_converter"></activity>
     </application>
 
 </manifest>
