--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="notesapp.com.quebasetech.joe.notestojoe">
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -31,7 +37,8 @@
         <activity android:name=".unit_converter" />
         <activity android:name=".Rating_App" />
         <activity android:name=".Explicit_intent" />
-        <activity android:name=".Home_page"></activity>
+        <activity android:name=".Home_page" />
+        <activity android:name=".Implicit_Intent"></activity>
     </application>
 
 </manifest>
