--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="notesapp.com.quebasetech.joe.notestojoe">
 
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -38,7 +38,9 @@
         <activity android:name=".Rating_App" />
         <activity android:name=".Explicit_intent" />
         <activity android:name=".Home_page" />
-        <activity android:name=".Implicit_Intent"></activity>
+        <activity android:name=".Implicit_Intent" />
+        <activity android:name=".Notifications" />
+        <activity android:name=".Notifications_view"></activity>
     </application>
 
 </manifest>
